edited studio template to fix image name

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -45,7 +45,7 @@
 <section class="third">
     <article class="box" id="news">
         <div>
-        {% for image in news.itemimage_set.all %}
+        {% for image in news.newsitemimage_set.all %}
                     {% if image.is_main %}
                         <a href="{% url news_item_list %}">
                             <img class="flex" alt="{{ news.title }}" src="{{ image.aside.url }}" /></a>
