--- a/futuregreen/templates/studio/newsitem_detail.html
+++ b/futuregreen/templates/studio/newsitem_detail.html
@@ -4,7 +4,7 @@
 <section class="two-thirds">
     <h1>News</h1>
     <article class="box" id="news">
-        <p classM="date">{{ item.date_published|date:"M d, Y" }}</p>
+        <p class="date">{{ newsitem.date_published|date:"M d, Y" }}</p>
         <h2>{{ newsitem.title }}</h2>
         {% for image in newsitem.newsitemimage_set.all %}
            <img class="flex" alt="{{ newsitem.title }}" src="{{ image.main.url }}" />
