--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -47,7 +47,7 @@
         <div>
         {% for image in news.newsitemimage_set.all %}
                     {% if image.is_main %}
-                        <a href="{% url newsitem_list %}">
+                        <a href="{% url newsitem_detail %}">
                             <img class="flex" alt="{{ news.title }}" src="{{ image.aside.url }}" /></a>
                     {% endif %}
         {%  endfor %}
