--- a/futuregreen/templates/studio/newsitem_detail.html
+++ b/futuregreen/templates/studio/newsitem_detail.html
@@ -4,12 +4,17 @@
 <section class="two-thirds">
     <h1>News</h1>
     <article class="box" id="news">
-        <p class="date">{{ newsitem.date_published|date:"M d, Y" }}</p>
-        <h2>{{ newsitem.title }}</h2>
-        {% for image in newsitem.newsitemimage_set.all %}
-           <img class="flex" alt="{{ newsitem.title }}" src="{{ image.main.url }}" />
+        <section class="quarter">
+            <p class="date">
+                <span class="month">{{ news.date_published|date:"M" }}</span>
+                <span class="day">{{ news.date_published|date:"d" }}</span>
+            </p>
+        </section>
+        <h2>{{ news.title }}</h2>
+        {% for image in news.newsitemimage_set.all %}
+           <img class="flex" alt="{{ news.title }}" src="{{ image.main.url }}" />
         {%  endfor %}
-        {{ newsitem.body_html|safe }}
+        {{ news.body_html|safe }}
     </article>
 </section>
 <aside class="third">
