edited studio template to fix image name

--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -8,7 +8,7 @@
     {%  for article in latest %}
     <article>
         <section class="meta box sixth">
-            <p class="date square center">
+            <p class="date">
                 <span class="month">{{ news.date_published|date:"M" }}</span>
                 <span class="day">{{ news.date_published|date:"d" }}</span>
             </p>
