--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1029,6 +1029,37 @@ ul#project-nav {
     padding-top:20px;
 }
 
+#studio p.date {
+    overflow: auto;
+    float:left;
+    width:50%;
+    display: table;
+}
+
+
+#studio p.date {
+    background: #ccc;
+    color:#fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: table-cell; vertical-align: middle;
+    text-align: center;
+}
+
+#studio p.date span {
+    display:block;
+    font-family: Helvetica, Arial, sans-serif;
+    line-height:1em;
+}
+
+#studio p.date .day {
+    font-size: 2.4em;
+}
+
+#studio p.date .month {
+    font-size: .85em;
+}
+
 
 /******** MEDIA QUERIES **********/
 @media screen and (max-width: 1024px) {
