editing studio templates

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -43,8 +43,9 @@
 
 </section>
 <section class="third">
-    <article class="box" id="news">
+    <article id="news">
         <div>
+            <section class="box">
             {% for image in news.newsitemimage_set.all %}
                         {% if image.is_main %}
                             <a href="{{ news.get_absolute_url }}">
@@ -52,13 +53,14 @@
                         {% endif %}
             {%  endfor %}
             <h1 class="overlay">News</h1>
-            <section class="box third">
+            </section>
+            <section class="box quarter">
                 <p class="date">
                     <span class="month">{{ news.date_published|date:"M" }}</span>
                     <span class="day">{{ news.date_published|date:"d" }}</span>
                 </p>
             </section>
-            <section class="box two-thirds">
+            <section class="box three-quarters">
                 <h2>{{ news.title }}</h2>
                 {{ news.excerpt_html|safe }}
                 <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
