editing studio templates

--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -8,7 +8,7 @@
     {%  for article in latest %}
     <article>
         <section class="box sixth">
-            <p class="date">
+            <p class="date square">
                 <span class="month">{{ article.date_published|date:"M" }}</span>
                 <span class="day">{{ article.date_published|date:"d" }}</span>
             </p>
