--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -88,6 +88,29 @@
     {% endblock js_frameworks %}
 
     {% block js_global %}
+    <script type="text/javascript">
+        function Square() {
+                $('.square').each(function(){
+                    width = $(this).width();
+                    $(this).css('height',width);
+                });
+                $('.center').each(function(){
+                    width = $(this).width();
+                    $(this).css('line-height',width + "px");
+                });
+        }
+
+
+        $(document).ready(function() {
+            Square();
+        });
+
+        $(window).resize(function() {
+            Square();
+        });
+
+    </script>
+{% endblock js_local %}
     {% endblock js_global %}
 
     {% block js_local %}
