--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -8,12 +8,12 @@
     {%  for article in latest %}
     <article>
         <section class="box eighth">
-            <p class="date square">
+            <div class="date square">
                 <ul>
                     <li class="month">{{ article.date_published|date:"M" }}</li>
                     <li class="day">{{ article.date_published|date:"d" }}</li>
                 </ul>
-            </p>
+            </div>
         </section>
         <section class="box seven-eighths">
             <h2><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
