--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -17,6 +17,11 @@
         </section>
         <section class="box seven-eighths">
             <h2><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
+            <ul class="tags">
+                {% for tag in article.tags.all %}
+                <li> {{ tag.name }} </li>
+                {% endfor %}
+            </ul>
             {{ article.excerpt_html|safe }}
             <p class="tease"><a href="{{ article.get_absolute_url }}">Read More</a></p>
         <section>
