--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -22,8 +22,12 @@
                 <li> {{ tag.name }}{% if not forloop.last %}, {% endif %}</li>
                 {% endfor %}
             </ul>
+            {% if forloop.first %}
+            {{ article.body_html|safe }}
+            {%  else %}
             {{ article.excerpt_html|safe }}
             <p class="tease"><a href="{{ article.get_absolute_url }}">Read More</a></p>
+            {% endif %}
         <section>
     </article>
     {% endfor %}
