--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -8,8 +8,8 @@
     {%  for article in latest %}
     <article>
         <section class="box eighth">
-            <div class="date square">
-                <ul>
+            <div class="date">
+                <ul class="square">
                     <li class="month">{{ article.date_published|date:"M" }}</li>
                     <li class="day">{{ article.date_published|date:"d" }}</li>
                 </ul>
