--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -385,6 +385,7 @@ div.date ul {
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
+    width:100%;
 }
 
 div.date li {
