--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -88,7 +88,18 @@
     {% endblock js_frameworks %}
 
     {% block js_global %}
-    
+    <script type="text/javascript">
+        function Square() {
+                $('.square').each(function(){
+                    width = $(this).width();
+                    $(this).css('height',width);
+                });
+                $('.center').each(function(){
+                    width = $(this).width();
+                    $(this).css('line-height',width + "px");
+                });
+        }
+    </script>
     {% endblock js_global %}
 
     {% block js_local %}
