--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -8,6 +8,7 @@
     <section class="third">
         <h2>Latest Projects</h2>
         {% load category_tags %}
+        {% get_latest_objects_by_category research portfolio project date_published 10 as project_list %}
         <h2>Latest Articles</h2>
         {% load article_tags %}
         <ul>
