--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -6,9 +6,9 @@
 {% endblock main %}
 {% block aside %}
     <section class="third">
-        <h2>Latest Projects</h2>
+        <h2 class="box">Research Projects</h2>
             {% for project in project_list %}
-                <article class="project list box quarter {% for type in project.project_types.all %}{{ type.name|lower }}&nbsp;{% endfor %}">
+                <article class="project list box half {% for type in project.project_types.all %}{{ type.name|lower }}&nbsp;{% endfor %}">
                     <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
                     <section>
                         {% for image in project.projectimage_set.all %}
@@ -22,9 +22,9 @@
                     </section>
                 </article>
             {% endfor %}
-        <h2>Latest Articles</h2>
+        <h2 class="box">Recent Articles</h2>
         {% load article_tags %}
-        <ul>
+        <ul class="box">
         {% get_latest_articles 10 as article_list %}
         {%  for article in article_list %}
             <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
