--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -28,7 +28,7 @@
             {{ article.excerpt_html|safe }}
             <p class="tease"><a href="{{ article.get_absolute_url }}">Read More</a></p>
             {% endif %}
-        <section>
+        </section>
     </article>
     {% endfor %}
 </section>
