--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -22,7 +22,7 @@
                     </section>
                 </article>
             {% endfor %}
-        <h2 class="box">Recent Articles</h2>
+        <h2 style="clear:both;" class="box">Recent Articles</h2>
         {% load article_tags %}
         <ul class="box">
         {% get_latest_articles 10 as article_list %}
