--- a/futuregreen/templates/research/article_detail.html
+++ b/futuregreen/templates/research/article_detail.html
@@ -1,6 +1,7 @@
 {% extends "research/research_base.html" %}
 {% block main %}
 <section class="main two-thirds">
+    <h2 class="box">Articles & Discussion</h2>
     <article>
         <section class="box eighth">
             <div class="date">
