--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -1,7 +1,7 @@
 {% extends "research/research_base.html" %}
 {% block main %}
 <section class="main two-thirds">
-    <h2 class="box">Articles & Discussion</h2>
+    <h2 class="box">Writing & Teaching</h2>
     {%  for article in latest %}
     <article>
         <section class="box eighth">
