--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -6,7 +6,7 @@
     <article>
          <section class="box quarter">
             <div class="date half">
-                <ul class="square">
+                <ul class="square half">
                     <li class="month">{{ article.date_published|date:"M" }}</li>
                     <li class="day">{{ article.date_published|date:"d" }}</li>
                 </ul>
